# cimco-v2

./: .gitignore  CHANGES_PRD.md  CLAUDE.md  PRD_IMPROVEMENTS.md  TEST_COVERAGE_REPORT.md  package-lock.json  package.json  playwright.config.ts
.claude/: settings.local.json
.taskmaster/: config.json
backend/: .env.example  Cargo.toml  README.md  TESTING.md  TEST_SUMMARY.md  seed.sql
backend/.github/workflows/: ci.yml
backend/migrations/: 001_users.sql  002_parts.sql  003_inventory_transactions.sql
backend/src/: config.rs  db.rs  error.rs  lib.rs  main.rs
backend/src/auth/: handler.rs  jwt.rs  mod.rs  model.rs  service.rs  validation.rs
backend/src/http/: dto.rs  mod.rs  routes.rs
backend/src/http/middleware/: auth.rs  rate_limit.rs
backend/src/inventory/: handler.rs  mod.rs  model.rs  repository.rs  service.rs
backend/tests/: mod.rs
backend/tests/common/: fixtures.rs  helpers.rs  mod.rs
backend/tests/integration/: auth_tests.rs  health_tests.rs  mod.rs  parts_tests.rs
backend/tests/unit/: config_tests.rs  db_tests.rs  error_tests.rs  http_tests.rs  mod.rs
backend/tests/unit/auth/: handler_tests.rs  mod.rs  model_tests.rs  service_tests.rs
backend/tests/unit/inventory/: mod.rs  model_tests.rs  repository_tests.rs  service_tests.rs
database/: README.md  docker-compose.yml
e2e/: api.spec.ts
frontend/: .env.example  .gitignore  README.md  index.html  package.json  tailwind.config.js  vitest.config.ts
ops/: .env.example  Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.dev.yml  docker-compose.prod.yml
tasks/: tasks.json
(+111 files in other folders)
